--- a/index.html
+++ b/index.html
@@ -2062,7 +2062,7 @@ Claes Nilsson,
 Dave Raggett,
 davidmarkclements,
 Domenic Denicola,
-Dominique Hazael-Massieux,
+Dominique Hazael-Massieux (via the HTML5Apps project),
 Frederick Hirsch,
 Francesco Iovine,
 gmandyam,
@@ -2083,7 +2083,8 @@ smaug----,
 and
 zenparsing.</p>
    <p>We’d also like to thank
-Anssi Kostiainen,Erik Wilde,
+Anssi Kostiainen,
+Erik Wilde,
 and
 Michael[tm] Smith
 for their editorial input.</p>
