--- a/index.html
+++ b/index.html
@@ -1453,8 +1453,9 @@ that can be extended to accommodate different sensor types.</p>
     <li>
      <a href="#security-and-privacy-considerations"><span class="secno">6</span> <span class="content">Security and privacy considerations</span></a>
      <ol class="toc">
-      <li><a href="#secure-context"><span class="secno">6.1</span> <span class="content">Secure Context</span></a>
-      <li><a href="#permissioning"><span class="secno">6.2</span> <span class="content">Obtaining Explicit User Permission</span></a>
+      <li><a href="#browsing-context"><span class="secno">6.1</span> <span class="content">Browsing Context</span></a>
+      <li><a href="#secure-context"><span class="secno">6.2</span> <span class="content">Secure Context</span></a>
+      <li><a href="#permissioning"><span class="secno">6.3</span> <span class="content">Obtaining Explicit User Permission</span></a>
      </ol>
     <li>
      <a href="#extensibility"><span class="secno">7</span> <span class="content">Extensibility</span></a>
@@ -1893,12 +1894,45 @@ expressed in milliseconds that passed since the <a data-link-type="dfn" href="ht
    <h4 class="heading settled" data-level="5.2.2" id="sensorreadingsensorid"><span class="secno">5.2.2. </span><span class="content">SensorReading.sensorId</span><a class="self-link" href="#sensorreadingsensorid"></a></h4>
    <p>Returns the id of the sensor the reading is taken from.</p>
    <h2 class="heading settled" data-level="6" id="security-and-privacy-considerations"><span class="secno">6. </span><span class="content">Security and privacy considerations</span><a class="self-link" href="#security-and-privacy-considerations"></a></h2>
-   <p>TODO: gather general security and privacy risks common to all sensors.</p>
-   <h3 class="heading settled" data-level="6.1" id="secure-context"><span class="secno">6.1. </span><span class="content">Secure Context</span><a class="self-link" href="#secure-context"></a></h3>
-   <p>Sensor data is explicitly flagged by the
+   <p>Privacy risks can arise when <a data-link-type="dfn" href="#sensor">sensors</a> are used
+with each other,
+in combination with other functionality,
+or when used over time,
+specifically with the risk of correlation of data
+and user identification through fingerprinting.
+Web application developers using these JavaScript APIs should
+consider how this information might be correlated with other information
+and the privacy risks that might be created.
+The potential risks of collection of such data over a longer period of time
+should also be considered.</p>
+   <p>Variations in <a data-link-type="dfn" href="#output-data">output data</a> as well as event firing rates
+offer the possibility of fingerprinting to identify users.
+Browser implementations may reduce the risk by
+limiting event rates available to web application developers.</p>
+   <p class="note" role="note">Note: do we really want this mitigation strategy?</p>
+   <p>If the same JavaScript code using the API can be
+used simultaneously in different window contexts on the same device
+it may be possible for that code to correlate the user across those two contexts,
+creating unanticipated tracking mechanisms.</p>
+   <p>Browser implementations should consider providing the user
+an indication of when the <a data-link-type="dfn" href="#sensor">sensor</a> is used
+and allowing the user to disable it.</p>
+   <p>Web application developers that use <a data-link-type="dfn" href="#sensor">sensors</a> should
+perform a privacy assessment of their application
+taking all aspects of their application into consideration.</p>
+   <h3 class="heading settled" data-level="6.1" id="browsing-context"><span class="secno">6.1. </span><span class="content">Browsing Context</span><a class="self-link" href="#browsing-context"></a></h3>
+   <p>Sensor <a data-link-type="dfn" href="#output-data">output data</a> should only be available in the <a data-link-type="dfn">top-level browsing context</a> to avoid the privacy risk of
+sharing the information defined in this specification
+(and specifications extending it)
+with contexts unfamiliar to the user.
+For example, a mobile device will only fire the event on
+the active tab, and not on the background tabs or within iframes.</p>
+   <h3 class="heading settled" data-level="6.2" id="secure-context"><span class="secno">6.2. </span><span class="content">Secure Context</span><a class="self-link" href="#secure-context"></a></h3>
+   <p>Sensor <a data-link-type="dfn" href="#output-data">output data</a> is explicitly flagged by the
 Secure Contexts specification <a data-link-type="biblio" href="#biblio-powerful-features">[powerful-features]</a> as a high-value target for network attackers.
-As such, sensor data should only be available within a <a data-link-type="dfn" href="https://w3c.github.io/webappsec/specs/powerfulfeatures/#secure-context">secure context</a>.</p>
-   <h3 class="heading settled" data-level="6.2" id="permissioning"><span class="secno">6.2. </span><span class="content">Obtaining Explicit User Permission</span><a class="self-link" href="#permissioning"></a></h3>
+As such, sensor <a data-link-type="dfn" href="#output-data">output data</a> should only be available
+within a <a data-link-type="dfn" href="https://w3c.github.io/webappsec/specs/powerfulfeatures/#secure-context">secure context</a>.</p>
+   <h3 class="heading settled" data-level="6.3" id="permissioning"><span class="secno">6.3. </span><span class="content">Obtaining Explicit User Permission</span><a class="self-link" href="#permissioning"></a></h3>
    <div class="issue no-marker" id="issue-d41d8cd91">
     <a class="self-link" href="#issue-d41d8cd91"></a><a class="marker" href="https://github.com/w3c/sensors/issues/20">Issue #20 on GitHub: “Allow for async permission request when first accessing sensor data”</a>
     <p>Make sure the API is compatible with sensors which need to ask the user's permission before being used.</p>
