Fix ref to top level browsing context.

--- a/index.html
+++ b/index.html
@@ -1890,7 +1890,7 @@ and allowing the user to disable it.</p>
 perform a privacy assessment of their application
 taking all aspects of their application into consideration.</p>
    <h3 class="heading settled" data-level="6.1" id="browsing-context"><span class="secno">6.1. </span><span class="content">Browsing Context</span><a class="self-link" href="#browsing-context"></a></h3>
-   <p>Sensor <a data-link-type="dfn" href="#output-data">output data</a> should only be available in the <a data-link-type="dfn">top-level browsing context</a> to avoid the privacy risk of
+   <p>Sensor <a data-link-type="dfn" href="#output-data">output data</a> should only be available in the <a data-link-type="dfn" href="https://html.spec.whatwg.org/multipage/browsers.html#top-level-browsing-context">top-level browsing context</a> to avoid the privacy risk of
 sharing the information defined in this specification
 (and specifications extending it)
 with contexts unfamiliar to the user.
@@ -2200,6 +2200,7 @@ for their editorial input.</p>
      <li><a href="https://html.spec.whatwg.org/multipage/infrastructure.html#in-parallel">in parallel</a>
      <li><a href="https://html.spec.whatwg.org/multipage/webappapis.html#incumbent-settings-object">incumbent settings object</a>
      <li><a href="https://html.spec.whatwg.org/multipage/webappapis.html#queue-a-task">queue a task</a>
+     <li><a href="https://html.spec.whatwg.org/multipage/browsers.html#top-level-browsing-context">top-level browsing context</a>
     </ul>
    <li>
     <a data-link-type="biblio" href="#biblio-webidl">[WebIDL]</a> defines the following terms:
