--- a/index.html
+++ b/index.html
@@ -1537,11 +1537,11 @@ applying algorithms to <a data-link-type="dfn" href="#low-level">low-level</a> s
    <p>That said, the distinction between <a data-link-type="dfn" href="#high-level">high-level</a> and <a data-link-type="dfn" href="#low-level">low-level</a> sensor types
 is somewhat arbitrary and the line between the two is often blurred.
 For instance, a barometer, which measures air pressure,
-would be considered <a data-link-type="dfn" href="#low-level">low-level</a> for most common purposes.
-Even though it is the product of the <a data-link-type="dfn" href="#sensor-fusion">sensor fusion</a> of
-resistive piezo-electric pressure and temperature sensors,
-exposing the sensors that compose it would serve no practical purpose
-(who cares about the temperature of a piezo-electric sensor?).
+would be considered <a data-link-type="dfn" href="#low-level">low-level</a> for most common purposes,
+even though it is the product of the <a data-link-type="dfn" href="#sensor-fusion">sensor fusion</a> of
+resistive piezo-electric pressure and temperature sensors.
+Exposing the sensors that compose it would serve no practical purpose;
+Who cares about the temperature of a piezo-electric sensor?
 A pressure-altimeter would probably fall in the same category,
 while a nondescript altimeter—<wbr>which could get its data from either a barometer or a GPS signal—<wbr>would clearly be categorized as a <a data-link-type="dfn" href="#high-level">high-level</a> sensor type.</p>
    <p>Because the distinction is somewhat blurry,
