--- a/index.html
+++ b/index.html
@@ -1423,7 +1423,7 @@ that can be extended to accommodate different sensor types.</p>
     <li><a href="#intro"><span class="secno">1</span> <span class="content">Introduction</span></a>
     <li><a href="#scope"><span class="secno">2</span> <span class="content">Scope</span></a>
     <li><a href="#terminology"><span class="secno">3</span> <span class="content">Terminology</span></a>
-    <li><a href="#feature-detection"><span class="secno">4</span> <span class="content">An note on Feature Detection of Hardware Features</span></a>
+    <li><a href="#feature-detection"><span class="secno">4</span> <span class="content">A note on Feature Detection of Hardware Features</span></a>
     <li><a href="#model"><span class="secno">5</span> <span class="content">Model</span></a>
     <li>
      <a href="#api"><span class="secno">6</span> <span class="content">API</span></a>
@@ -1527,7 +1527,7 @@ This should have little to no effects on implementations, however.</p>
 sensor discovery API.
 This is because the limited number of sensors currently available to User Agents
 does not warrant such an API.
-Using feature detection, such as described in <a href="#feature-detection">§4 An note on Feature Detection of Hardware Features</a>,
+Using feature detection, such as described in <a href="#feature-detection">§4 A note on Feature Detection of Hardware Features</a>,
 is good enough for now.
 A subsequent version of this specification might specify such an API,
 and the current API has been designed with this in mind.</p>
@@ -1615,7 +1615,7 @@ However, when the underlying implementation itself only provides <a data-link-ty
 perhaps because is is relying on <a data-link-type="dfn" href="#smart-sensors">smart sensors</a> or a <a data-link-type="dfn" href="#sensor-hubs">sensor hubs</a>,
 the <a data-link-type="dfn" href="#reporting-modes">reporting mode</a> cannot be <a data-link-type="dfn" href="#periodic">periodic</a>,
 as that would require data inference.</p>
-   <h2 class="heading settled" data-level="4" id="feature-detection"><span class="secno">4. </span><span class="content">An note on Feature Detection of Hardware Features</span><a class="self-link" href="#feature-detection"></a></h2>
+   <h2 class="heading settled" data-level="4" id="feature-detection"><span class="secno">4. </span><span class="content">A note on Feature Detection of Hardware Features</span><a class="self-link" href="#feature-detection"></a></h2>
    <p><em>This section is non-normative.</em></p>
    <p>Feature detection is an established Web development best practice.
 Resources on the topic are plentiful on and offline and
